--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,15 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-war-plugin</artifactId>
-    <version>3.9.4</version>
-  </plugin>
+  
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.9.4</version>
+      </plugin>
+    </plugins>
     <finalName>01-maven-web-app</finalName>
   </build>
 </project>
