--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.8.4</version>
-      </plugin>
-    </plugins>
-    <finalName>01-maven-web-app</finalName>
-  </build>
+    <pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>    
+        </plugins>
+    </pluginManagement>
+     <finalName>01-maven-web-app</finalName>
+</build>
 </project>
